autoservice removal changes