@@ -12,9 +12,12 @@
 		<version>1.6.0-SNAPSHOT</version>
 	</parent>
 
-	<properties>
-		<tinkar-core.version>1.88.0-SNAPSHOT</tinkar-core.version>
-	</properties>
+    <properties>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    	<tinkar-core.version>1.91.0-SNAPSHOT</tinkar-core.version>
+    </properties>
 
 	<artifactId>tinkar-starter-data</artifactId>
 	<name>tinkar-starter-data</name>
@@ -51,6 +54,11 @@
 			<artifactId>entity-provider</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>dev.ikm.tinkar</groupId>
+			<artifactId>data-ephemeral-provider</artifactId>
+		</dependency>	
+			
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
@@ -70,16 +78,6 @@
 
 		<dependency>
 			<groupId>dev.ikm.tinkar</groupId>
-			<artifactId>data-spinedarray-provider</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>dev.ikm.tinkar</groupId>
-			<artifactId>data-spinedarray-provider</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>dev.ikm.tinkar</groupId>
 			<artifactId>reasoner-elk-snomed</artifactId>
 		</dependency>
 		
@@ -89,9 +87,15 @@
 		</dependency>		
 
 		<dependency>
+			<groupId>dev.ikm.tinkar</groupId>
+			<artifactId>reasoner-hybrid</artifactId>
+			
+		</dependency>	
+
+		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
-			<scope>test</scope>
+			<!--<scope>test</scope>-->
 		</dependency>
 
 		<dependency>
@@ -102,62 +106,73 @@
 	</dependencies>
 
 	<build>
-		<pluginManagement>
+<!--		<pluginManagement>-->
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.14.1</version>
+					<version>3.5.2</version>
 					<configuration>
+						<!--<testFailureIgnore>true</testFailureIgnore>-->
+						<forkCount>0</forkCount> 
+						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 						<includes>
 							<include>**/*Test.java</include>
 						</includes>
 					</configuration>
 				</plugin>
-			</plugins>
-		</pluginManagement>
-		<!--        <plugins>
-            <plugin>
-                <groupId>dev.ikm.maven.plugin.tinkar</groupId>
-                <artifactId>tinkar-data-maven-plugin</artifactId>
-                <version>1.6.0-SNAPSHOT</version>
-                <executions>
-                    <execution>
-                        <id>load-data</id>
-                        <goals>
-                            <goal>generate-data</goal>
-                        </goals>
-                        <configuration>
-                            <dataStore>${project.build.directory}/tinkar-starter-data</dataStore>
-		<exportFile>${project.build.directory}/tinkar-export-starter-data-pb.zip</exportFile>
-                        </configuration>
-                    </execution>
-                </executions>
+
+		        <plugin>
+                	<groupId>dev.ikm.tinkar</groupId>
+                	<artifactId>tinkar-data-maven-plugin</artifactId>
+                	<executions>
+                    	<execution>
+                        	<id>load-data</id>
+                        	<goals>
+                            	<goal>generate-data</goal>
+                        	</goals>
+                        	<configuration>
+                            	<dataStore>${project.build.directory}/tinkar-starter-data</dataStore>
+								<exportFile>${project.build.directory}/tinkar-export-starter-data-pb.zip</exportFile>
+                        	</configuration>
+                    	</execution>
+                	</executions>
+            	</plugin>
+            
+            	<plugin>
+                	<groupId>org.codehaus.mojo</groupId>
+                	<artifactId>build-helper-maven-plugin</artifactId>
+                
+                	<executions>
+                    	<execution>
+                        	<id>attach-artifacts</id>
+                        	<phase>compile</phase>
+                        	<goals>
+                            	<goal>attach-artifact</goal>
+                        	</goals>
+                        
+                        	<configuration>
+                            	<artifacts>
+                                	<artifact>
+                                    	<file>${project.build.directory}/tinkar-export-starter-data-pb.zip</file>
+                                    	<type>zip</type>
+                                    	<classifier>tinkar-export-pb</classifier>
+                                	</artifact>
+                            	</artifacts>
+                        	</configuration>
+                    	</execution>
+                	</executions>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>${build-helper-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>attach-artifacts</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>attach-artifact</goal>
-                        </goals>
-                        <configuration>
-                            <artifacts>
-                                <artifact>
-                                    <file>${project.build.directory}/tinkar-export-starter-data-pb.zip</file>
-                                    <type>zip</type>
-                                    <classifier>tinkar-export-pb</classifier>
-                                </artifact>
-                            </artifacts>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>-->
+        </plugins>
 		<!--</pluginManagement>-->
+		
+	    <resources>
+	        <resource>
+	            <directory>src/main/resources</directory>
+	            <includes>
+	                <include>META-INF/services/**</include>
+	            </includes>
+	        </resource>
+	    </resources>	
 	</build>
 </project>
